Krijimi i nje muri per automjetet qe jane ne oferte.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="content-nav">
             <nav class="nav">
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a style="border-bottom:1px solid red ;" href="">Home</a></li>
                     <li><a href="">Cars</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Contact</a></li>
@@ -35,6 +35,31 @@
         <div class="TopSection2">
             <h4 class="h4-section">BEST SERVICES!</h4>
             <h1 class="h1-section">FULL FUNCTIONAL FEEDBACK SYSTEM!</h1>
+        </div>
+    </div>
+    <div class="offers">
+        <div class="offers1">
+            <h2>Rent <br> a perfect car <br> for any occasion</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad facere architecto asperiores hic.</p>
+            <button>Let's go</button>
+        </div>
+        <div class="offers2">
+            <p style="color: tomato; font-size: 25px; margin: 3; text-align: left; margin-left: 10px;"><b>Economic</b></p>
+            <p style="margin-top: 250px;">Price:</p>
+            <h2>$18/day</h2>
+            <p>Model:</p>
+            <h2>Golf 7 - GTD</h2>
+            <br>
+            <button>View Deal</button>
+        </div>
+        <div class="offers3">
+            <p style="color: tomato; font-size: 25px; margin: 3; text-align: left; margin-left: 10px;"><b>Comfort</b></p>
+            <p style="margin-top: 250px;">Price:</p>
+            <h2>$22/day</h2>
+            <p>Model:</p>
+            <h2>Jeep Grand Cherokee</h2>
+            <br>
+            <button>View Deal</button>
         </div>
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
