--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <a href="">CAR <span>RENTAL</span></a>
+            <a href=""><b>CAR <span>RENTAL</span></b></a>
         </div>
         <div class="content-nav">
             <nav class="nav">
@@ -16,7 +16,7 @@
                     <li><a style="border-bottom:1px solid red ;" href="">Home</a></li>
                     <li><a href="">Cars</a></li>
                     <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="./contactUs.html">Contact</a></li>
                     <li><a href="">Register</a></li>
                     <li><a href="">Login</a></li>
                 </ul>
@@ -33,8 +33,6 @@
             <h1 class="h1-section">A LOT OF VARIANTS AVAILIABLE!</h1>
         </div>
         <div class="TopSection2">
-            <h4 class="h4-section">BEST SERVICES!</h4>
-            <h1 class="h1-section">FULL FUNCTIONAL FEEDBACK SYSTEM!</h1>
         </div>
     </div>
     <div class="offers">
@@ -44,8 +42,8 @@
             <button>Let's go</button>
         </div>
         <div class="offers2">
-            <p style="color: tomato; font-size: 25px; margin: 3; text-align: left; margin-left: 10px;"><b>Economic</b></p>
-            <p style="margin-top: 250px;">Price:</p>
+            <img style="width: 40px; height: 60px; margin: 1em;" src="./assets/ribbon.png" alt="">
+            <p style="margin-top: 190px;">Price:</p>
             <h2>$18/day</h2>
             <p>Model:</p>
             <h2>Golf 7 - GTD</h2>
@@ -53,8 +51,8 @@
             <button>View Deal</button>
         </div>
         <div class="offers3">
-            <p style="color: tomato; font-size: 25px; margin: 3; text-align: left; margin-left: 10px;"><b>Comfort</b></p>
-            <p style="margin-top: 250px;">Price:</p>
+            <img style="width: 40px; height: 60px; margin: 1em;" src="./assets/best.png" alt="">
+            <p style="margin-top: 190px;">Price:</p>
             <h2>$22/day</h2>
             <p>Model:</p>
             <h2>Jeep Grand Cherokee</h2>
