--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Rental Car System</title>
 </head>
 
@@ -62,6 +63,55 @@
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./js/script.js"></script>
+
+    <footer class="footer-distributed">
+        <div class="fotter-l">
+            <h3>CAR <span>RENTAL</span></h3>
+            <p class="footer-links">
+                <a href="#">Home</a>
+                |
+                <a href="#">Cars</a>
+                |
+                <a href="#">About</a>
+                |
+                <a href="#">Contact</a>
+                |
+                <a href="#">Register</a>
+                |
+                <a href="#">Login</a>
+            </p>
+            <p class="footer-company-name">Copyright © 2022 <strong>CAR RENTAL</strong>
+            All rights reserved</p>
+        </div>
+        <div class="footer-center">
+            <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>Prishtinë,</span>
+                Kosovë</p>
+            </div>
+            <div>
+                <i class="fa fa-phone"></i>
+                <p>+383 49 000 000</p>
+            </div>
+            <div">
+                <i class="fa fa-envelope"></i>
+                <p><a href="#">car-rental@rental.com</a></p>
+            </div>
+        </div>
+        <div class="footer-right">
+            <p class="footer-company-about">
+                <span>About the company</span>
+                <strong>CAR RENTAL</strong> is a Rent a Car company where you can find
+                best cars.
+            </p>
+            <div class="footer-icons">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+                <a href="#" class="fa fa-twitter"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
