Evetimi i disa problemeve me height dhe shtimin i links per footer

--- a/index.html
+++ b/index.html
@@ -61,39 +61,31 @@
             <button>View Deal</button>
         </div>
     </div>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="./js/script.js"></script>
-
     <footer class="footer-distributed">
         <div class="fotter-l">
             <h3>CAR <span>RENTAL</span></h3>
             <p class="footer-links">
-                <a href="#">Home</a>
-                |
-                <a href="#">Cars</a>
-                |
-                <a href="#">About</a>
-                |
-                <a href="#">Contact</a>
-                |
-                <a href="#">Register</a>
-                |
+                <a href="#">Home</a> <br>
+                <a href="#">Cars</a> <br>
+                <a href="#">About</a> <br>
+                <a href="./contactUs.html">Contact</a> <br>
+                <a href="#">Register</a> <br>
                 <a href="#">Login</a>
             </p>
             <p class="footer-company-name">Copyright © 2022 <strong>CAR RENTAL</strong>
-            All rights reserved</p>
+                All rights reserved</p>
         </div>
         <div class="footer-center">
             <div>
                 <i class="fa fa-map-marker"></i>
                 <p><span>Prishtinë,</span>
-                Kosovë</p>
+                    Kosovë</p>
             </div>
             <div>
                 <i class="fa fa-phone"></i>
                 <p>+383 49 000 000</p>
             </div>
-            <div">
+            <div>
                 <i class="fa fa-envelope"></i>
                 <p><a href="#">car-rental@rental.com</a></p>
             </div>
@@ -105,13 +97,15 @@
                 best cars.
             </p>
             <div class="footer-icons">
-                <a href="#" class="fa fa-facebook"></a>
-                <a href="#" class="fa fa-instagram"></a>
-                <a href="#" class="fa fa-linkedin"></a>
-                <a href="#" class="fa fa-twitter"></a>
+                <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+                <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+                <a href="https://www.linkedin.com/?trk=guest_homepage-basic_nav-header-logo" class="fa fa-linkedin"></a>
+                <a href="https://twitter.com/" class="fa fa-twitter"></a>
             </div>
         </div>
     </footer>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
