--- a/contactUs.html
+++ b/contactUs.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html style="height: 100%;">
+<html>
 
 <head>
-    <title>Contact US</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Contact US</title>
 </head>
 
-<body style="height: 100% ;">
-    <div class="container">
+<body class="bodyContact">
     <header class="header">
         <div class="logo">
             <a href=""><b>CAR <span>RENTAL</span></b></a>
@@ -25,14 +24,58 @@
             </nav>
         </div>
     </header>
-        <div class="formBox">
-            <h2>Contact Us</h2>
-            <input class="inputi" type="text" value="Username"> <br>
-            <input class="inputi" type="email" value="E - Mail"> <br> <br>
-            <input class="message" type="text" value="Type message here..."> <br>
-            <input style="color: white;" class="submit" type="submit" value="Send">
-        </div>
+    <div class="formBox">
+        <h1>Contact Us</h1>
+        <input class="inputi" type="text" value="Username"> <br>
+        <input class="inputi" type="email" value="E - Mail"> <br> <br>
+        <input class="message" type="text" value="Type message here..."> <br>
+        <input style="color: white;" class="submit" type="submit" value="Send">
     </div>
+    </div>
+    <footer class="footer-distributed">
+        <div class="fotter-l">
+            <h3>CAR <span>RENTAL</span></h3>
+            <p class="footer-links">
+                <a href="./index.html">Home</a> <br>
+                <a href="#">Cars</a> <br>
+                <a href="#">About</a> <br>
+                <a href="#">Contact</a> <br>
+                <a href="#">Register</a> <br>
+                <a href="#">Login</a>
+            </p>
+            <p class="footer-company-name">Copyright © 2022 <strong>CAR RENTAL</strong>
+                All rights reserved</p>
+        </div>
+        <div class="footer-center">
+            <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>Prishtinë,</span>
+                    Kosovë</p>
+            </div>
+            <div>
+                <i class="fa fa-phone"></i>
+                <p>+383 49 000 000</p>
+            </div>
+            <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="#">car-rental@rental.com</a></p>
+            </div>
+        </div>
+        <div class="footer-right">
+            <p class="footer-company-about">
+                <span>About the company</span>
+                <strong>CAR RENTAL</strong> is a Rent a Car company where you can find
+                best cars.
+            </p>
+            <div class="footer-icons">
+                <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+                <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+                <a href="https://www.linkedin.com/?trk=guest_homepage-basic_nav-header-logo" class="fa fa-linkedin"></a>
+                <a href="https://twitter.com/" class="fa fa-twitter"></a>
+            </div>
+    </footer>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
