--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <!--<header class="header">
+     <header class="header">
         <div class="logo">
             <a href=""><b>CAR <span>RENTAL</span></b></a>
         </div>
@@ -22,7 +22,7 @@
                     <li><a href="">Login</a></li>
                 </ul>
             </nav>
-        </div>   -->
+        </div>   
     </header>
     <div id="slideshow">
         <div class="TopSection0">
