Krijimi i login dhe register forms

--- a/contactUs.html
+++ b/contactUs.html
@@ -18,8 +18,8 @@
                     <li><a href="">Cars</a></li>
                     <li><a href="">About</a></li>
                     <li><a style="border-bottom:1px solid red ;" href="./contactUs.html">Contact</a></li>
-                    <li><a href="">Register</a></li>
-                    <li><a href="">Login</a></li>
+                    <li><a href="./register.html">Register</a></li>
+                    <li><a href="./login.html">Login</a></li>
                 </ul>
             </nav>
         </div>
@@ -40,8 +40,8 @@
                 <a href="#">Cars</a> <br>
                 <a href="#">About</a> <br>
                 <a href="#">Contact</a> <br>
-                <a href="#">Register</a> <br>
-                <a href="#">Login</a>
+                <a href="./register.html">Register</a> <br>
+                <a href="./login.html">Login</a>
             </p>
             <p class="footer-company-name">Copyright © 2022 <strong>CAR RENTAL</strong>
                 All rights reserved</p>
