--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <div class="content-nav">
             <nav class="nav">
                 <ul>
-                    <li><a style="border-bottom:1px solid red ;" href="">Home</a></li>
-                    <li><a href="">Cars</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="./contactUs.html">Contact</a></li>
-                    <li><a href="">Register</a></li>
-                    <li><a href="">Login</a></li>
+                    <li><a class="a-bottom" style="border-bottom:1px solid red ;" href="">Home</a></li>
+                    <li><a class="a-bottom" href="">Cars</a></li>
+                    <li><a class="a-bottom" href="">About</a></li>
+                    <li><a class="a-bottom" href="./contactUs.html">Contact</a></li>
+                    <li><a class="a-bottom" href="./register.html">Register</a></li>
+                    <li><a class="a-bottom" href="./login.html">Login</a></li>
                 </ul>
             </nav>
         </div>   
@@ -69,8 +69,8 @@
                 <a href="#">Cars</a> <br>
                 <a href="#">About</a> <br>
                 <a href="./contactUs.html">Contact</a> <br>
-                <a href="#">Register</a> <br>
-                <a href="#">Login</a>
+                <a href="./register.html">Register</a> <br>
+                <a href="./login.html">Login</a>
             </p>
             <p class="footer-company-name">Copyright © 2022 <strong>CAR RENTAL</strong>
                 All rights reserved</p>
