--- a/register.html
+++ b/register.html
@@ -10,14 +10,15 @@
     <a class="loginTop" href="./index.html"><b>CAR <span>RENTAL</span></b></a>
     <div class="login-box">
         <h1>Sing Up</h1> <br>
-        <input class="inputi" type="text" value="Username"> <br>
-        <input class="inputi" type="text" value="E - Mail"> <br>
-        <input class="inputi" type="password"> <br> <br>
+        <input type="text" id="userId" class="inputi"   value="Username"> <br>
+        <input type="text" id="emailId" class="inputi"   value="E - Mail"> <br>
+        <input class="inputi" id="pass" type="password" >  <br> <br>
         <label>Have account? <a href="./login.html">Sing In here!</a></label> <br>
-        <input style="color: white;" class="submit" type="submit" value="Sing Up">
+        <input  type="submit" id="Btn-submit" class="submit" value="Sing Up"  style="color: white;">
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/validimi.js"></script>
 </body>
 
 </html>
