--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-     <header class="header">
+    <header class="header">
+        <video src="./assets/video.mp4" autoplay muted></video>
         <div class="logo">
             <a href=""><b>CAR <span>RENTAL</span></b></a>
         </div>
@@ -22,9 +23,10 @@
                     <li><a class="a-bottom" href="./login.html">Login</a></li>
                 </ul>
             </nav>
-        </div>   
+        </div><br>
+        <h2>Taking care of our customers, <br> our communities, our employees <br> and our environment.</h2>
     </header>
-    <div id="slideshow">
+    <!-- <div id="slideshow">
         <div class="TopSection0">
             <h4 class="h4-section">FIND YOUR CAR TODAY!</h4>
             <h1 class="h1-section">BOOK THE BEST CAR FOR YOU!</h1>
@@ -35,7 +37,7 @@
         </div>
         <div class="TopSection2">
         </div>
-    </div>
+    </div> -->
     <div class="offers">
         <div class="offers1">
             <h2>Rent <br> a perfect car <br> for any occasion</h2>
