--- a/login.html
+++ b/login.html
@@ -10,13 +10,20 @@
     <a class="loginTop" href="./index.html"><b>CAR <span>RENTAL</span></b></a>
     <div class="login-box">
         <h1>Sing In</h1> <br>
-        <input class="inputi" type="text" value="Username or E - Mail"> <br>
-        <input class="inputi" type="password"> <br> <br>
-        <label>Not registred? <a href="./register.html">Register here!</a></label> <br>
-        <input style="color: white;" class="submit"   type="submit" value="Sing In">
+        <form action="./index.html" onsubmit="return validationLogin()">
+            <label>Email or Username</label> <br> <input class="inputi" id="user" type="text"> <br> <span
+                style="color: red; font-size:medium;" id="userError"></span> <br>
+            <label>Password</label> <br> <input class="inputi" id="pass" type="password"> <br> <span style="color: red; font-size:medium;"
+                id="passError"></span> <br>
+            <label>Not registred? <a href="./register.html">Register here!</a></label> <br>
+            <input id="loginBtn" style="color: white;" class="submit" type="submit" value="Sing In"  >
+        </form>
+
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/validimi.js"></script>
+
 </body>
 
 </html>
