--- a/register.html
+++ b/register.html
@@ -8,17 +8,34 @@
 
 <body class="register-body">
     <a class="loginTop" href="./index.html"><b>CAR <span>RENTAL</span></b></a>
-    <div class="login-box">
+    <div class="register-box">
         <h1>Sing Up</h1> <br>
-        <input type="text" id="userId" class="inputi"   value="Username"> <br>
-        <input type="text" id="emailId" class="inputi"   value="E - Mail"> <br>
-        <input class="inputi" id="pass" type="password" >  <br> <br>
-        <label>Have account? <a href="./login.html">Sing In here!</a></label> <br>
-        <input  type="submit" id="Btn-submit" class="submit" value="Sing Up"  style="color: white;">
+        <form action="./login.html" onsubmit="return validationRegister()">
+            <label>Username</label> <br> <input class="inputi" id="userId" type="text"> <br>
+            <span style="color: red; font-size:medium;" id="userError"></span> <br>
+            <label>E - Mail</label> <br> <input type="text" id="emailId" class="inputi"> <br>
+            <span style="color: red; font-size:medium;" id="emailError"></span> <br>
+            <label>Birthday</label> <br>
+            <input class="inputi" id="data" type="date"> <br>
+            <!-- <span style="color: red; font-size:medium;" id="birthError"></span> <br> -->
+            <label>Password</label> <br>
+            <input class="inputi" id="pass" type="password"> <br>
+            <span style="color: red; font-size:medium;" id="passError"></span> <br>
+            <label>Confirm Password</label> <br>
+            <input class="inputi" id="passConfirm" type="password"> <br>
+            <span style="color: red; font-size:medium;" id="confirmPassError"></span> <br>
+            <label>Phone Number</label> <br>
+            <input class="inputi" id="numeriTel" type="number"> <br>
+            <span style="color: red; font-size:medium;" id="numError"></span> <br>
+            <label>Have account? <a href="./login.html">Sing In here!</a></label> <br>
+            <input type="submit" id="submitButton" class="submit" value="Sing Up" style="color: white;">
+        </form>
+
+
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./js/script.js"></script>
-    <script src="./js/validimi.js"></script>
+    <script src="./js/validimi.js"></script>    
 </body>
 
 </html>
