Finalizimi i visualizimit ne home page duke shtuar sliderin dhe nje box me disa foto per informata rreth faqes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <header class="header">
-        <video src="./assets/video.mp4" autoplay muted></video>
+        <video src="./assets/video.mp4" autoplay muted loop></video>
         <div class="logo">
             <a href=""><b>CAR <span>RENTAL</span></b></a>
         </div>
@@ -26,6 +26,11 @@
         </div><br>
         <h2>Taking care of our customers, <br> our communities, our employees <br> and our environment.</h2>
     </header>
+    <div class="detailSection">
+        <div class="foto1"></div>
+        <div class="foto2"></div>
+        <div class="foto3"></div>
+    </div>
     <!-- <div id="slideshow">
         <div class="TopSection0">
             <h4 class="h4-section">FIND YOUR CAR TODAY!</h4>
@@ -38,6 +43,19 @@
         <div class="TopSection2">
         </div>
     </div> -->
+    <ul id="slides">
+        <li class="slide showing">
+            <h4 class="h4-section">FIND YOUR CAR TODAY!</h4>
+            <h1 class="h1-section">BOOK THE BEST CAR FOR YOU!</h1>
+        </li>
+        <li class="slide">
+            <h4 class="h4-section">FIND THE BEST VARIANTS!</h4>
+            <h1 class="h1-section">A LOT OF VARIANTS AVAILIABLE!</h1>
+        </li>
+        <li class="slide"></li>
+        <!-- <li class="slide">Slide 4</li>
+        <li class="slide">Slide 5</li> -->
+    </ul>
     <div class="offers">
         <div class="offers1">
             <h2>Rent <br> a perfect car <br> for any occasion</h2>
