Visualizimi i login&register forms per eksperienc sa me te mire.

--- a/login.html
+++ b/login.html
@@ -11,11 +11,11 @@
     <div class="login-box">
         <h1>Sing In</h1> <br>
         <form action="./index.html" onsubmit="return validationLogin()">
-            <label>Email or Username</label> <br> <input class="inputi" id="user" type="text"> <br> <span
+            <label>Email or Username</label>  <input class="inputi" id="user" type="text"> <br> <span
                 style="color: red; font-size:medium;" id="userError"></span> <br>
-            <label>Password</label> <br> <input class="inputi" id="pass" type="password"> <br> <span style="color: red; font-size:medium;"
+            <label>Password</label>  <input class="inputi" id="pass" type="password"> <br> <span style="color: red; font-size:medium;"
                 id="passError"></span> <br>
-            <label>Not registred? <a href="./register.html">Register here!</a></label> <br>
+            <label>Not registred? <a style="color: rgb(14, 88, 247);" href="./register.html">Register here!</a></label> <br>
             <input id="loginBtn" style="color: white;" class="submit" type="submit" value="Sing In"  >
         </form>
 
