Rregullimi i madhesise se fontit per shum elemente dhe ndryshimi i fontit ne te gjitha faqet.

--- a/contactUs.html
+++ b/contactUs.html
@@ -28,11 +28,12 @@
         <h1>Contact Us</h1>
         <form action="./index.html" onsubmit="return validationContact()">
             <label>Email or Username</label> <br> <input class="inputi" type="text" id="user"> <br> <span
-                style="color: red;" id="userError"></span> <br>
+                id="userError"></span> <br>
             <label>Message</label> <br>
             <textarea id="message" rows="5" cols="60" name="description">
-            </textarea><br> <span style="color: red;" id="messageError"></span> <br>
-            <input style="background-color: blue; color: white;"  type="submit" id="submitButton" class="inputi" value="Send"  style="color: white;">
+            </textarea><br> <span id="messageError"></span> <br>
+            <input style="background-color: blue; color: white;" type="submit" id="submitButton" class="inputi"
+                value="Send" style="color: white;">
         </form>
     </div>
     </div>
