--- a/login.html
+++ b/login.html
@@ -7,16 +7,17 @@
 </head>
 
 <body class="login-body">
-    <a class="loginTop" href="./index.html"><b>CAR <span>RENTAL</span></b></a>
+    <a class="loginTop" href="./index.html"><b>CAR <span style="color: #e4461f;">RENTAL</span></b></a>
     <div class="login-box">
         <h1>Sing In</h1> <br>
         <form action="./index.html" onsubmit="return validationLogin()">
-            <label>Email or Username</label>  <input class="inputi" id="user" type="text"> <br> <span
-                style="color: red; font-size:medium;" id="userError"></span> <br>
-            <label>Password</label>  <input class="inputi" id="pass" type="password"> <br> <span style="color: red; font-size:medium;"
-                id="passError"></span> <br>
-            <label>Not registred? <a style="color: rgb(14, 88, 247);" href="./register.html">Register here!</a></label> <br>
-            <input id="loginBtn" style="color: white;" class="submit" type="submit" value="Sing In"  >
+            <label>Email or Username</label> <input class="inputi" id="user" type="text"> <br> <span
+                id="userError"></span> <br>
+            <label>Password</label> <input class="inputi" id="pass" type="password"> <br> <span id="passError"></span>
+            <br>
+            <label>Not registred? <a style="color: rgb(14, 88, 247);" href="./register.html">Register here!</a></label>
+            <br>
+            <input id="loginBtn" style="color: white;" class="submit" type="submit" value="Sing In">
         </form>
 
     </div>
