--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a class="a-bottom" style="border-bottom:1px solid red ;" href="">Home</a></li>
                     <li><a class="a-bottom" href="">Cars</a></li>
-                    <li><a class="a-bottom" href="">About</a></li>
+                    <li><a class="a-bottom" href="./aboutUs.html">About</a></li>
                     <li><a class="a-bottom" href="./contactUs.html">Contact</a></li>
                     <li><a class="a-bottom" href="./register.html">Register</a></li>
                     <li><a class="a-bottom" href="./login.html">Login</a></li>
@@ -87,7 +87,7 @@
             <p class="footer-links">
                 <a href="#">Home</a> <br>
                 <a href="#">Cars</a> <br>
-                <a href="#">About</a> <br>
+                <a href="./aboutUs.html">About</a> <br>
                 <a href="./contactUs.html">Contact</a> <br>
                 <a href="./register.html">Register</a> <br>
                 <a href="./login.html">Login</a>
