--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,12 +1,11 @@
+<!DOCTYPE html>
 <html>
-
 <head>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Contact US</title>
+    <title>About Us</title>
 </head>
-
-<body class="bodyContact">
+<body class="bodyAbout">
     <header>
         <div class="logo">
             <a href="./index.html"><b>CAR <span>RENTAL</span></b></a>
@@ -16,26 +15,28 @@
                 <ul>
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="">Cars</a></li>
-                    <li><a href="./aboutUs.html">About</a></li>
-                    <li><a style="border-bottom:1px solid red ;" href="./contactUs.html">Contact</a></li>
+                    <li><a style="border-bottom:1px solid red ;" href="/AboutUs.html">About</a></li>
+                    <li><a href="./contactUs.html">Contact</a></li>
                     <li><a href="./register.html">Register</a></li>
                     <li><a href="./login.html">Login</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <div class="formBox">
-        <h1>Contact Us</h1>
-        <form action="./index.html" onsubmit="return validationContact()">
-            <label>Email or Username</label> <br> <input class="inputi" type="text" id="user"> <br> <span
-                id="userError"></span> <br>
-            <label>Message</label> <br>
-            <textarea id="message" rows="5" cols="60" name="description">
-            </textarea><br> <span id="messageError"></span> <br>
-            <input style="background-color: blue; color: white;" type="submit" id="submitButton" class="inputi"
-                value="Send" style="color: white;">
-        </form>
-    </div>
+    <div class="about-section">
+        <div class="inner-container">
+            <h1>About Us</h1>
+            <p class="text">CAR RENTAL Rent-A-Car is an ongoing American success story. Our guiding principles, and humble beginning, revolve around personal honesty and integrity. We believe in strengthening our communities one neighborhood at a time, serving our customers as if they were our family, and rewarding hard work. These things are as true today as they were when we were founded in 1957.
+                Today, our massive network means Enterprise is the largest transportation solutions provider. We offer car and truck rentals, as well as car sharing and car sales. We're there when you need us with over 8,000 locations worldwide.
+                We take an active role in sustainability, not only because it's smart for our business, but because we believe in making the world a better place for future generations. Because of our size, we are in a unique position to foster innovation, advance research and test market-driven solutions.
+                </p>
+                <div class="socials">
+                    <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+                    <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+                    <a href="https://www.linkedin.com/?trk=guest_homepage-basic_nav-header-logo" class="fa fa-linkedin"></a>
+                    <a href="https://twitter.com/" class="fa fa-twitter"></a>
+                </div>
+        </div>
     </div>
     <footer class="footer-distributed">
         <div class="fotter-l">
@@ -83,5 +84,4 @@
     <script src="./js/script.js"></script>
     <script src="./js/validimi.js"></script>
 </body>
-
 </html>
