Krijimi i page- products per cars

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav class="nav">
                 <ul>
                     <li><a class="a-bottom" style="border-bottom:1px solid red ;" href="">Home</a></li>
-                    <li><a class="a-bottom" href="">Cars</a></li>
+                    <li><a class="a-bottom" href="./Cars.html">Cars</a></li>
                     <li><a class="a-bottom" href="">About</a></li>
                     <li><a class="a-bottom" href="./contactUs.html">Contact</a></li>
                     <li><a class="a-bottom" href="./register.html">Register</a></li>
@@ -95,7 +95,7 @@
                 <span>About the company</span>
                 <strong>CAR RENTAL</strong> is a Rent a Car company where you can find
                 best cars.
-            </p>
+            </p>    
             <div class="footer-icons">
                 <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
                 <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
