Krijimi i animacionit tek faqja e produkteve

--- a/Cars.html
+++ b/Cars.html
@@ -29,6 +29,13 @@
 
 
 <body>
+  <!-- Animation box-->
+  <div class="box">
+  
+    <h1>HELLO FROM PRODUCTS</h1>
+</div>
+
+
     
     <div class="Car-products">
         <div class="product">
